APIS LOGIN(VALIDACION_DE_CREDENCIALES),INFORMES(INFORMES_X_NUM_PLACA,CREAR_INFORME)

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ PG_DABASE = heimdall
 PG_PORT = 3306
 
 #CONEXION CON MONGO
-MONGO_URI = mongodb://localhost:27017/heimdall
+MONGO_URI = "mongodb://localhost:27017/Heimdall"
 
 #JWT
 JWT_SECRET = EstaEsUnaClaveSecretaMuySegura123456
