--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 PORT=5000
 
 #CONEXION CON MySQL
-PG_HOST = localhost
-PG_USER = root
-PG_PASSWORD = 
-PG_DABASE = heimdall
-PG_PORT = 3306
+MY_HOST = localhost
+MY_USER = root
+MY_PASSWORD = 
+MY_DABASE = heimdall
+MY_PORT = 3306
 
 #CONEXION CON MONGO
 MONGO_URI = "mongodb://localhost:27017/Heimdall"
