--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ MY_DABASE = heimdall
 MY_PORT = 3306
 
 #CONEXION CON MONGO
-MONGO_URI = "mongodb://localhost:27017/Heimdall"
-#MONGO_URI = "mongodb+srv://Heimdall:2123102025ISC@equipo-yggdrasil.cabzkpv.mongodb.net/?retryWrites=true&w=majority&appName=Equipo-Yggdrasil"
+#MONGO_URI = "mongodb://localhost:27017/Heimdall"
+MONGO_URI = "mongodb+srv://Heimdall:2123102025ISC@equipo-yggdrasil.cabzkpv.mongodb.net/Heimdall?retryWrites=true&w=majority&appName=Equipo-Yggdrasil"
 
 #JWT
 JWT_SECRET = EstaEsUnaClaveSecretaMuySegura123456
