--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 PORT=5000
 
 #CONEXION CON MySQL
-MY_HOST = localhost
-MY_USER = root
-MY_PASSWORD = 
-MY_DABASE = heimdall
-MY_PORT = 3306
+MY_HOST = mysql-9e96258-itslerdo-016a.b.aivencloud.com
+MY_USER = avnadmin
+MY_PASSWORD = AVNS_l-16qounHPitifJhoy5
+MY_DABASE = defaultdb
+MY_PORT = 11044
 
 #CONEXION CON MONGO
 #MONGO_URI = "mongodb://localhost:27017/Heimdall"
